More descriptive information for the main page cards

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -31,24 +31,24 @@
         <div class="col-md-6">
             <div class="card sentry-card">
                 <div class="card-block">
-                    <h4 class="card-title">Card 2</h4>
-                    <p class="card-text">Some text</p>         
+                    <h4 class="card-title">Expenses</h4>
+                    <p class="card-text">Information about your latest expenses</p>         
                 </div>         
             </div>
         </div>
         <div class="col-md-6">
             <div class="card sentry-card">
                 <div class="card-block">
-                    <h4 class="card-title">Card 3</h4>         
-                    <p class="card-text">Some text</p>         
+                    <h4 class="card-title">E-mail messages</h4>         
+                    <p class="card-text">Here there will be a Gmail integration so i can have a quick check in the latest e-mails of my inbox</p>         
                 </div>
             </div>
         </div>
         <div class="col-md-6">
             <div class="card sentry-card">
                 <div class="card-block">
-                    <h4 class="card-title">Card 4</h4>
-                    <p class="card-text">Some text</p>         
+                    <h4 class="card-title">Scheduling</h4>
+                    <p class="card-text">Here there will be some scheduling information provided by me through the Web app or mobile app</p>         
                 </div>         
             </div>
         </div>
