--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-    <p>Gabriel Freire @ www.gabrielfreire.com.br</p>
+    <p>Gabriel Freire @ <a class="sentry-link" href="http://www.gabrielfreire.com.br" target="_blank">www.gabrielfreire.com.br</a></p>
 </div>
