Fixed main page layout

--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -104,6 +104,9 @@ a:hover {
     color: #e7afaf;
     text-decoration: none;
 }
+.sentry-main{
+    min-height: 545px;
+}
 /* ==========================================================================
 Custom alerts for notification
 ========================================================================== */
