--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container sentry-main">
     <div class="row" *ngIf="!isAuthenticated()">
         <div class="col-md-12">
             <h1 class="display-4 text-center">Welcome to Sentry!</h1>
@@ -16,21 +16,21 @@
         </div>
     </div>
     <div class="row" *ngIf="isAuthenticated()">
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-12">
             <div class="card sentry-card">
                 <div class="card-block">
                     <h4 class="card-title"><i class="fa fa-user-o" aria-hidden="true"></i> Users Registered<small><a class="sentry-link float-right" routerLink="/user-management">User Management</a></small></h4>
                     <div *ngIf="users">
                         <p *ngFor="let user of users" class="card-text">
                             <strong>{{user.login}}</strong> 
-                            <span *ngIf="user.activated" class="activated"></span>
-                            <span *ngIf="!user.activated" class="deactivated"></span>  
+                            <span *ngIf="user.activated" class="activated float-right"></span>
+                            <span *ngIf="!user.activated" class="deactivated float-right"></span>  
                         </p>
                     </div>        
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-12">
             <div class="card sentry-card">
                 <div class="card-block">
                     <h4 class="card-title"><i class="fa fa-credit-card" aria-hidden="true"></i> Expenses</h4>
@@ -38,7 +38,7 @@
                 </div>         
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-12">
             <div class="card sentry-card">
                 <div class="card-block">
                     <h4 class="card-title"><i class="fa fa-envelope-o" aria-hidden="true"></i> E-mail messages</h4>         
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-12">
             <div class="card sentry-card">
                 <div class="card-block">
                     <h4 class="card-title"><i class="fa fa-book" aria-hidden="true"></i> Scheduling</h4>
