--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -53,7 +53,7 @@
                     </h4>
                     <div *ngIf="expenses">
                         <span *ngFor="let expense of expenses" class="card-text">
-                            {{expense.title}} - {{expense.amount | currency}}
+                            {{expense.title}} - {{expense.amount | currency: 'EUR':true}}
                             <span class="float-right">{{expense.date | date: 'dd/MM/yyyy'}}</span>
                             <hr>
                         </span>         
