--- a/src/main/webapp/app/entities/expense/expense.component.html
+++ b/src/main/webapp/app/entities/expense/expense.component.html
@@ -13,55 +13,47 @@
     </div>
     <br/>
     <div class="table-responsive" *ngIf="expenses">
-        <table class="table table-striped">
+        <table class="sentry-table table table-striped table-hover">
             <thead>
-            <tr>
-            <th><span>ID</span></th>
-            <th><span>Title</span></th>
-            <th><span>Description</span></th>
-            <th><span>Amount</span></th>
-            <th><span>Type</span></th>
-            <th><span>Date</span></th>
-            <th><span>User</span></th>
-            <th></th>
-            </tr>
+                <tr>
+                    <th><span>ID</span></th>
+                    <th><span>Title</span></th>
+                    <th><span>Description</span></th>
+                    <th><span>Amount</span></th>
+                    <th><span>Type</span></th>
+                    <th><span>Date</span></th>
+                    <th><span>User</span></th>
+                    <th></th>
+                </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let expense of expenses ;trackBy: trackId">
-                <td><a [routerLink]="['../expense', expense.id ]">{{expense.id}}</a></td>
-                <td>{{expense.title}}</td>
-                <td>{{expense.description}}</td>
-                <td>{{expense.amount | currency: 'EUR':true}}</td>
-                <td>{{expense.type}}</td>
-                <td>{{expense.date | date:'dd/MM/yyyy'}}</td>
-                <td>
-                    {{expense.userLogin}}
-                </td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['../expense', expense.id ]"
-                                class="btn btn-info btn-sm">
+                <tr *ngFor="let expense of expenses ;trackBy: trackId">
+                    <td><a [routerLink]="['../expense', expense.id ]">{{expense.id}}</a></td>
+                    <td>{{expense.title}}</td>
+                    <td>{{expense.description}}</td>
+                    <td>{{expense.amount | currency: 'EUR':true}}</td>
+                    <td>{{expense.type}}</td>
+                    <td>{{expense.date | date:'dd/MM/yyyy'}}</td>
+                    <td>
+                        {{expense.userLogin}}
+                    </td>
+                    <td class="text-right">
+                        <div class="btn-group flex-btn-group-container">
+                            <button type="submit" [routerLink]="['../expense', expense.id ]" class="btn btn-info btn-sm">
                             <span class="fa fa-eye"></span>
                             <span class="hidden-md-down">View</span>
                         </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'expense/'+ expense.id + '/edit'} }]"
-                                replaceUrl="true"
-                                class="btn btn-primary btn-sm">
+                            <button type="submit" [routerLink]="['/', { outlets: { popup: 'expense/'+ expense.id + '/edit'} }]" replaceUrl="true" class="btn btn-primary btn-sm">
                             <span class="fa fa-pencil"></span>
                             <span class="hidden-md-down">Edit</span>
                         </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'expense/'+ expense.id + '/delete'} }]"
-                                replaceUrl="true"
-                                class="btn btn-danger btn-sm">
+                            <button type="submit" [routerLink]="['/', { outlets: { popup: 'expense/'+ expense.id + '/delete'} }]" replaceUrl="true" class="btn btn-danger btn-sm">
                             <span class="fa fa-remove"></span>
                             <span class="hidden-md-down">Delete</span>
                         </button>
-                    </div>
-                </td>
-            </tr>
+                        </div>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
