--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -16,11 +16,11 @@
         </div>
     </div>
     <div class="row" *ngIf="isAuthenticated()">
-        <div class="col-md-6 col-sm-12">
+        <div *jhiHasAnyAuthority="'ROLE_ADMIN'" class="col-md-6 col-sm-12">
             <div class="card sentry-card">
                 <div class="card-block">
                     <h4 class="card-title">
-                        <i class="fa fa-user-o" aria-hidden="true"></i> Users Registered 
+                        <i class="fa fa-user-o" aria-hidden="true"></i> Users Registered
                         <span class="badge badge-success">{{users?.length}}</span>
                         <small>
                             <a class="sentry-edit-link float-right" routerLink="/user-management">
@@ -32,10 +32,10 @@
                         <span *ngFor="let user of users" class="card-text">
                             <strong>{{user.login}}</strong> 
                             <span *ngIf="user.activated" class="activated float-right"></span>
-                            <span *ngIf="!user.activated" class="deactivated float-right"></span>  
-                            <hr>
+                        <span *ngIf="!user.activated" class="deactivated float-right"></span>
+                        <hr>
                         </span>
-                    </div>        
+                    </div>
                 </div>
             </div>
         </div>
@@ -45,8 +45,9 @@
                     <h4 class="card-title">
                         <i class="fa fa-credit-card" aria-hidden="true"></i> Expenses
                         <span class="badge badge-success">{{expenses?.length}}</span>
-                        <small>
-                            <a class="sentry-edit-link float-right" routerLink="/expense">
+                        <small class="float-right">
+                            <span>Total: {{totalExpenses | currency: 'EUR':true}}</span>
+                            <a class="sentry-edit-link" routerLink="/expense">
                                 <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                             </a>
                         </small>
@@ -55,19 +56,19 @@
                         <span *ngFor="let expense of expenses" class="card-text">
                             {{expense.title}} - {{expense.amount | currency: 'EUR':true}}
                             <span class="float-right">{{expense.date | date: 'dd/MM/yyyy'}}</span>
-                            <hr>
-                        </span>         
+                        <hr>
+                        </span>
                     </div>
-                </div>       
+                </div>
             </div>
         </div>
         <div class="col-md-6 col-sm-12">
             <div class="card sentry-card">
                 <div class="card-block">
-                    <h4 class="card-title"><i class="fa fa-envelope-o" aria-hidden="true"></i> E-mail messages</h4>         
+                    <h4 class="card-title"><i class="fa fa-envelope-o" aria-hidden="true"></i> E-mail messages</h4>
                     <span class="card-text">
                         Here there will be a Gmail integration so i can have a quick check in the latest e-mails of my inbox
-                    </span>         
+                    </span>
                 </div>
             </div>
         </div>
@@ -75,7 +76,7 @@
             <div class="card sentry-card">
                 <div class="card-block">
                     <h4 class="card-title">
-                        <i class="fa fa-book" aria-hidden="true"></i> Scheduling 
+                        <i class="fa fa-book" aria-hidden="true"></i> Scheduling
                         <span class="badge badge-success">{{schedules?.length}}</span>
                         <small>
                             <a class="sentry-edit-link float-right" routerLink="/schedule">
@@ -90,7 +91,7 @@
                         </span>
 
                     </div>
-                </div>         
+                </div>
             </div>
         </div>
     </div>
